--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -523,6 +523,7 @@ de:
       groups: "Gruppen"
       help: "Hilfe"
       about: "&Uuml;ber uns"
+      meetups: "Treffpunkte"
     user:
       profile: "Profil"
       resources: "Ressourcen"
