--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -697,6 +697,8 @@ de:
         declined: " hat deinen Ping abgewiesen."
         closed: " hat deinen Ping geschlossen."
         opened: " hat dir einen Ping geschickt."
+    meetup:
+      invitation: "%{user} hat dich zu einem Treffen eingeladen."
   
   ## forms
   
