--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -197,7 +197,9 @@ de:
   searchIn: "Suchen in"    
   searchedIn: "<b>%{item}</b> wurde <b>%{count}</b> mal gesucht"
   searchOptions: "Suchoptionen"
-	help: "Hilfe"
+  help: "Hilfe"
+  preferences: "Einstellungen"
+  changepassword: "Passwort &auml;ndern"
   about: "&Uuml;ber uns"
   options: "Optionen"
   confirm_delete: "Wirklich, wirklich l&ouml;schen?"
