--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -797,10 +797,12 @@ en:
         multiple: "do you need this resource occasionally or regularly? /<br />do you offer this resource occasionally or regularly?" 
         #tag_list: "Tags are written commaseparated."
       user:
-        #aim_list: "What is your heart burning for...?"
-        #skill_list: "What can you do easily and without effort?"
-        #interest_list: "What makes your eyes lighten up?"
-        #wish_list: "What are your dreams?"
+        aim_list: "What is your heart burning for...?"
+        skill_list: "What can you do easily and without effort?"
+        interest_list: "What makes your eyes lighten up?"
+        wish_list: "What are your dreams?"
+        is_active: "When deactivating your account all your resources, pings and comments are not visible to the others. You can re-activate your account by clicking the activation-link, which will be send to you."
+        destroyed: "By clicking the 'Quit account' button all of your data will be deleted! This process cannot be reverted, so consider if your account should only be deactivated, to access your data at later time."
       event:
         from: "click on the field above to see the calendar." 
         till: "click on the field above to see the calendar."  
