mailbox style repair; rspecs added to messages

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -690,6 +690,7 @@ de:
     reply: "Antworten"
     inbox: "Posteingang"
     sent: "Postausgang"
+    messages: "Nachrichten"
     newMessage: "Neue Nachricht"
     subject: "Betreff"
     body: "Nachricht"
