texting of participate-button of a group

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -342,6 +342,8 @@ de:
     participant:
       one: "1 Teilnehmer"
       other: "%{count} Teilnehmer"
+    participate: "Teilnehmen"
+
   ## item
   item:
     related:
