--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -339,7 +339,8 @@ en:
     participant:
       one: "1 Participant"
       other: "%{count} Participants"
-    
+    participate: "Participate"    
+
   ## item
   item:
     related:
