--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -529,7 +529,7 @@ de:
        accept:
          notice: "Teilnahmeanfrage akzeptiert."
        destroy:
-         notice: "Teilnahmeanfrage widerrufen."
+         notice: "Teilnahmeanfrage abgelehnt."
 
   ## menu
   
@@ -731,8 +731,11 @@ de:
       invitation: "%{user} hat dich zu einem Treffen eingeladen."
     group:
       participation_request: "%{sender} hat eine Anfrage zur Teilnahme deiner Gruppe '%{title}' geschickt."
+      invitation: "%{sender} hat dich zur Gruppe '%{title}' eingeladen."
       participation_accepted: "Deine Anfrage zur Teilnahme der Gruppe '%{title}' wurde akzeptiert."
+      invitation_accepted: "%{sender} hat deine Einladung zur Gruppe '%{title}' akzeptiert."
       participation_aborted: "%{sender} hat die Teilnahmeanfrage deiner Gruppe '%{title}' abgebrochen."  
+      invitation_aborted: "%{sender} hat die Teilnahme deiner Gruppe '%{title}' abgelehnt."  
   ## forms
   
   form:
