--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -347,6 +347,8 @@ en:
 
   ## item
   item:
+    singular: "Resource"
+    plural: "Resources"
     related:
       need: "They need this"
       offer: "This might help"  
