--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -669,7 +669,7 @@ de:
       weHave: "Wir haben"
     login: "Login"
     mailbox: "Mailbox"
-    welcome: "Willkommen"
+    welcome: ""
     register: "Schreib' Dich ein:"
     location: "Dein Standort"
     event: "Event"
