--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -665,7 +665,7 @@ en:
       weHave: "We have"
     login: "Login"
     mailbox: "Mailbox"
-    welcome: "Welcome"
+    welcome: ""
     register: "Join"
     location: "Your location"
     event: "Event"
